data/all_generated_tests/raw_wast_tests/call_indirect_StackCorruption_4047.wast
;; 6. **Test 6: Malformed Signature**:    Inject a malformed function signature such that it conflicts with the expected signature during a `call_indirect`. Check if the implementation properly identifies and traps, avoiding any erroneous stack manipulation.

(assert_malformed
  (module quote
    "(type $malformed (func (param i32) (result)))"
    "(table 0 funcref)"
    "(func (result i32)"
    "  (call_indirect (result i32) (type $malformed)"
    "    (i32.const 0) (i32.const 0)"
    "  )"
    ")"
  )
  "unexpected token"
)